done: bugfix description product detail in cart page

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       font-family: "Urbanist", sans-serif;
     }
   </style>
-  <title>Pharmacy-App-4</title>
+  <title>Pharmadika</title>
 </head>
 
 <body>
